example/lib/src/generated/errors/errors_localization_pl.dart
// This file is generated, do not edit it manually!

// ignore: unused_import
import 'package:intl/intl.dart' as intl;
import 'errors_localization.dart';

// ignore_for_file: type=lint

/// The translations for Polish (`pl`).
class ErrorsLocalizationPl extends ErrorsLocalization {
  ErrorsLocalizationPl([String locale = 'pl']) : super(locale);

  @override
  String get error => 'Wystąpił błąd';

  @override
  String get unexpectedError => 'Wystąpił nieoczekiwany błąd';

  @override
  String get bugReportSentText => 'Zgłoszenie błędu zostało pomyślnie wysłane';
}
